  NOTE: This release no longer supports the old Oracle 7 OCI interface.

  Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
  Fixed Oracle version detection on clients thanks to Marko Asplund.
  Fixed Oracle 10 version detection on clients thanks to Andy Hassall.
  Fixed suprious warning from Makefile.PL thanks to Marko Asplund.

  Changed some utf8 internals for LOBs.

  Added some experimental NCHAR/UTF8 support thanks to Lincoln Baxter.
    $dbh->{ora_ph_csform} = SQLCS_NCHAR;
    $sth->bind_param(..., { ora_csform=>SQLCS_NCHAR });
    this is still a work-in-progress, help welcome.
  Added alternative implementation for ora_lob_append for Oracle < 9.0
    using OCILobGetLength() and OCILobWrite() thanks to Jeff Urlwin.
  Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
  Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
  Corrected typo in ora_lob_read() example thanks to Johannes Wierny.

=head1 Changes in DBD-Oracle 1.15   27th January 2004

  NOTE: DBD::Oracle now requires DBI version 1.28 (June 2002) or later.

  NOTE: This is probably the last release that will support being
  built with the old Oracle 7 OCI interface.

  NOTE: This release will build for perl 5.5 only after some manual edits
  which are detailed in README.help.  Future releases may not build for 5.5.
  Perl 5.5.3 is very old and and upgrading to at least 5.6.1 is recommended.
  The DBI itself has required perl >= 5.6.0 since DBI 1.38, August 2003.

  Fixed Makefile.PL for HPUX thanks to H.Merijn Brand & Sweth Chandramouli.
  Fixed Makefile.PL for handling 32/64bit libs thanks to Lincoln Baxter,
    Sean Kelly, Joel Van Boeckel and others. Oh the fun we've had.
  Fixed Makefile.PL error typo thanks to Martijn Koster.
  Fixed to build okay for Oracle 8.0.x and for older C compilers.
  Fixed minor omission in t/ph_test.t thanks to Tom Malaher.
  Fixed for extproc_perl (http://search.cpan.org/author/JHORWITZ/extproc_perl/)